--- a/FloodGuardian.API/appsettings.Development.json
+++ b/FloodGuardian.API/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "OracleConnection": "User Id=Rm557647;Password=270906;Data Source=oracle.fiap.com.br:1521/ORCL"
   }
 }
