--- a/FloodGuardian.API/FloodGuardian.API.csproj
+++ b/FloodGuardian.API/FloodGuardian.API.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.5">
       <PrivateAssets>all</PrivateAssets>
@@ -24,10 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\FloodGuardian.Application\FloodGuardian.Application.csproj" />
     <ProjectReference Include="..\FloodGuardian.Infrastructure\FloodGuardian.Infrastructure.csproj" />
   </ItemGroup>
 
