--- a/FloodGuardian.Application/FloodGuardian.Application.csproj
+++ b/FloodGuardian.Application/FloodGuardian.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.5">
       <PrivateAssets>all</PrivateAssets>
@@ -17,6 +18,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Oracle.EntityFrameworkCore" Version="9.23.80" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FloodGuardian.Domain\FloodGuardian.Domain.csproj" />
+    <ProjectReference Include="..\FloodGuardian.Infrastructure\FloodGuardian.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
