--- a/FloodGuardian.API/Properties/launchSettings.json
+++ b/FloodGuardian.API/Properties/launchSettings.json
@@ -1,24 +1,14 @@
 {
   "profiles": {
-    "http": {
+    "FloodGuardian.API": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
+      "applicationUrl": "http://0.0.0.0:7199",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5215"
-    },
-    "https": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7199;http://localhost:5215"
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
